--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -208,7 +208,10 @@
         "id": "DC59SZYiMfNY"
       },
       "source": [
-        "**Question 3** What is the state with most customers?"
+        "**Question 3** What is the state with most customers?\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -220,15 +223,74 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "tfGU3w-OMhA9"
+        "id": "tfGU3w-OMhA9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "09d54ab1-f0b7-43e7-f0f6-604fcbe03723"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The state with the most customers is: CA with 562 customers\n",
+            "All done!\n"
+          ]
+        }
+      ],
       "source": [
         "# open file and init vars\n",
-        "# evaluate the contents of the file"
+        "# evaluate the contents of the file\n",
+        "\n",
+        "from os.path import exists\n",
+        "import csv\n",
+        "\n",
+        "# check if file can be found and open the file\n",
+        "datafile = \"./sample_data/customers.csv\"\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "\n",
+        "state_counts = {}\n",
+        "index_state = None\n",
+        "\n",
+        "with open(datafile, 'r', encoding='utf-8') as fl:\n",
+        "    csvreader = csv.reader(fl, delimiter=',')\n",
+        "    header = next(csvreader)\n",
+        "\n",
+        "    try:\n",
+        "        index_state = header.index('State')\n",
+        "    except ValueError:\n",
+        "        raise SystemExit(\"The 'State' column was not found in the CSV.\")\n",
+        "\n",
+        "    for row in csvreader:\n",
+        "        if index_state < len(row):\n",
+        "            state = row[index_state]\n",
+        "            if state in state_counts:\n",
+        "                state_counts[state] += 1\n",
+        "            else:\n",
+        "                state_counts[state] = 1\n",
+        "\n",
+        "\n",
+        "if state_counts:\n",
+        "    most_common_state = max(state_counts.items(), key=lambda x: x[1])\n",
+        "    print(f\"The state with the most customers is: {most_common_state[0]} with {most_common_state[1]} customers\")\n",
+        "else:\n",
+        "    print(\"No data found.\")\n",
+        "\n",
+        "print(\"All done!\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wiRY7hX2f1OJ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -236,19 +298,70 @@
         "id": "7mcM6cUAMhLB"
       },
       "source": [
-        "**Question 4** What is the state with the least customers?"
+        "**Question 4** What is the state with the least customers?\n",
+        "\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "8T0Ka2RqMi3P"
+        "id": "8T0Ka2RqMi3P",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2401a037-42ff-4098-c5cb-ad19b84e1c41"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The state with the least customers is: WA with 1 customers\n",
+            "All done!\n"
+          ]
+        }
+      ],
       "source": [
         "# open file and init vars\n",
-        "# evaluate the contents of the file"
+        "# evaluate the contents of the file\n",
+        "from os.path import exists\n",
+        "import csv\n",
+        "\n",
+        "# check if file can be found and open the file\n",
+        "datafile = \"./sample_data/customers.csv\"\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "\n",
+        "state_counts = {}\n",
+        "index_state = None\n",
+        "\n",
+        "with open(datafile, 'r', encoding='utf-8') as fl:\n",
+        "    csvreader = csv.reader(fl, delimiter=',')\n",
+        "    header = next(csvreader)\n",
+        "\n",
+        "    try:\n",
+        "        index_state = header.index('State')\n",
+        "    except ValueError:\n",
+        "        raise SystemExit(\"The 'State' column was not found in the CSV.\")\n",
+        "\n",
+        "    for row in csvreader:\n",
+        "        if index_state < len(row):\n",
+        "            state = row[index_state]\n",
+        "            if state in state_counts:\n",
+        "                state_counts[state] += 1\n",
+        "            else:\n",
+        "                state_counts[state] = 1\n",
+        "\n",
+        "\n",
+        "if state_counts:\n",
+        "    least_common_state = min(state_counts.items(), key=lambda x: x[1])\n",
+        "    print(f\"The state with the least customers is: {least_common_state[0]} with {least_common_state[1]} customers\")\n",
+        "else:\n",
+        "    print(\"No data found.\")\n",
+        "\n",
+        "print(\"All done!\")"
       ]
     },
     {
@@ -262,14 +375,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "k8M1DmA75Km7"
+        "id": "k8M1DmA75Km7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "40060592-3831-4bb9-8f81-e1a304051a9f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The most common last name is: Smith (appears 8 times)\n",
+            "All done!\n"
+          ]
+        }
+      ],
       "source": [
         "# open file and init vars\n",
-        "# evaluate the contents of the file"
+        "# evaluate the contents of the file\n",
+        "\n",
+        "from os.path import exists\n",
+        "import csv\n",
+        "\n",
+        "# check if file can be found and open the file\n",
+        "datafile = \"./sample_data/customers.csv\"\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "\n",
+        "last_name_counts = {}\n",
+        "index_lastname = None\n",
+        "\n",
+        "with open(datafile, 'r', encoding='utf-8') as fl:\n",
+        "    csvreader = csv.reader(fl, delimiter=',')\n",
+        "    header = next(csvreader)\n",
+        "\n",
+        "    try:\n",
+        "        index_lastname = header.index('LastName')\n",
+        "    except ValueError:\n",
+        "        raise SystemExit(\"The 'LastName' column was not found in the CSV.\")\n",
+        "\n",
+        "    for row in csvreader:\n",
+        "        if index_lastname < len(row):\n",
+        "            last_name = row[index_lastname].strip()\n",
+        "            if last_name:\n",
+        "                if last_name in last_name_counts:\n",
+        "                    last_name_counts[last_name] += 1\n",
+        "                else:\n",
+        "                    last_name_counts[last_name] = 1\n",
+        "\n",
+        "if last_name_counts:\n",
+        "    most_common_last_name = max(last_name_counts.items(), key=lambda x: x[1])\n",
+        "    print(f\"The most common last name is: {most_common_last_name[0]} (appears {most_common_last_name[1]} times)\")\n",
+        "else:\n",
+        "    print(\"No last names found.\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(\"All done!\")"
       ]
     },
     {
