--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -375,20 +375,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 22,
       "metadata": {
         "id": "k8M1DmA75Km7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "40060592-3831-4bb9-8f81-e1a304051a9f"
+        "outputId": "5362619d-8ce8-4626-ae3d-58c1cc5e5a37"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The most common last name is: Smith (appears 8 times)\n",
+            "The most common last name is: Smith  with appears 8 times\n",
             "All done!\n"
           ]
         }
@@ -428,7 +428,7 @@
         "\n",
         "if last_name_counts:\n",
         "    most_common_last_name = max(last_name_counts.items(), key=lambda x: x[1])\n",
-        "    print(f\"The most common last name is: {most_common_last_name[0]} (appears {most_common_last_name[1]} times)\")\n",
+        "    print(f\"The most common last name is: {most_common_last_name[0]}  with appears {most_common_last_name[1]} times\")\n",
         "else:\n",
         "    print(\"No last names found.\")\n",
         "\n",
