Creado con Colaprimer ejerciciob

--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -477,13 +477,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
-        "id": "8ipJTrfs5QVM"
+        "id": "8ipJTrfs5QVM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fe813538-aff7-4ddf-a12f-a11782cc612a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Unique orders = 0\n",
+            "All done!\n"
+          ]
+        }
+      ],
       "source": [
-        "# open and evaluate orders.csv"
+        "# open and evaluate orders.csv\n",
+        "\n",
+        "from os.path import exists\n",
+        "import csv\n",
+        "\n",
+        "# check if file can be found and open the file\n",
+        "datafile = \"./sample_data/orders.csv\"\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "order_ids = set()\n",
+        "\n",
+        "with open(datafile, 'r', encoding='utf-8') as fl:\n",
+        "    reader = csv.reader(fl)\n",
+        "    header = next(reader)\n",
+        "\n",
+        "    id_order = header.index(\"OrderID\")\n",
+        "    for row in reader:\n",
+        "      if len(row) < 6:\n",
+        "        continue\n",
+        "        order_id = row[id_order]\n",
+        "\n",
+        "        order_ids.add(order_id)\n",
+        "\n",
+        "print(\" Unique orders =\", len(order_ids))\n",
+        "print(\"All done!\")"
       ]
     },
     {
