--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -145,18 +145,22 @@
         "**Question 2:** In how many different states do the customers live in?\n",
         "\n",
         "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 34,
       "metadata": {
         "id": "Bi_yid0sMe3-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "75f6be19-938b-48a6-fad2-a3f4a0f8a1a9"
+        "outputId": "e9077ba0-685b-4766-dfcb-13e99d1fec9b"
       },
       "outputs": [
         {
@@ -438,6 +442,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AirHSDWTv27M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "YPRma1t9NoFk"
@@ -477,50 +490,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 39,
       "metadata": {
         "id": "8ipJTrfs5QVM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fe813538-aff7-4ddf-a12f-a11782cc612a"
+        "outputId": "d61d300b-539b-49f7-d7a3-c1bcee2740f0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " Unique orders = 0\n",
+            "Unique orders = 16672\n",
+            "Average items per order = 1.76\n",
+            "Q3: Max items in one order = 35\n",
             "All done!\n"
           ]
         }
       ],
       "source": [
-        "# open and evaluate orders.csv\n",
-        "\n",
-        "from os.path import exists\n",
         "import csv\n",
+        "from os.path import exists\n",
+        "from collections import defaultdict\n",
         "\n",
-        "# check if file can be found and open the file\n",
         "datafile = \"./sample_data/orders.csv\"\n",
+        "\n",
         "if not exists(datafile):\n",
-        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "    raise SystemExit(\"¡Debes ejecutar la primera celda de código y descargar los archivos del conjunto de datos!\")\n",
+        "\n",
         "order_ids = set()\n",
+        "order_items = defaultdict(int)\n",
+        "\n",
+        "\n",
         "\n",
         "with open(datafile, 'r', encoding='utf-8') as fl:\n",
         "    reader = csv.reader(fl)\n",
         "    header = next(reader)\n",
         "\n",
         "    id_order = header.index(\"OrderID\")\n",
+        "\n",
         "    for row in reader:\n",
-        "      if len(row) < 6:\n",
-        "        continue\n",
+        "        if len(row) < 6:\n",
+        "            continue  # Saltar\n",
+        "\n",
         "        order_id = row[id_order]\n",
         "\n",
         "        order_ids.add(order_id)\n",
+        "        order_items[order_id] += 1\n",
         "\n",
-        "print(\" Unique orders =\", len(order_ids))\n",
-        "print(\"All done!\")"
+        "print(\"Unique orders =\", len(order_ids))\n",
+        "\n",
+        "avg_items =  sum(order_items.values())/ len(order_items)\n",
+        "print(\"Average items per order =\", round(avg_items, 2))\n",
+        "\n",
+        "max_items = max(order_items.values())\n",
+        "print(\"Max items in one order =\", max_items)\n",
+        "\n",
+        "print(\"All done!\")\n"
       ]
     },
     {
