todos los ejercicios

--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -490,65 +490,96 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 43,
       "metadata": {
         "id": "8ipJTrfs5QVM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d61d300b-539b-49f7-d7a3-c1bcee2740f0"
+        "outputId": "ebf53cfb-e201-4cb8-e85e-e477e9d63e55"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Unique orders = 16672\n",
-            "Average items per order = 1.76\n",
-            "Q3: Max items in one order = 35\n",
-            "All done!\n"
+            " Unique orders = 15675\n",
+            " Average items per order = 1.73\n",
+            " Max items in one order = 35\n",
+            " Orders in October 2021 = 267\n",
+            " Top customer in 2021 = 5172443 spent 7675.0\n",
+            " Best month for sales = 2022-01 with sales of 78605.0\n"
           ]
         }
       ],
       "source": [
-        "import csv\n",
         "from os.path import exists\n",
+        "import csv\n",
         "from collections import defaultdict\n",
+        "from datetime import datetime\n",
         "\n",
         "datafile = \"./sample_data/orders.csv\"\n",
-        "\n",
         "if not exists(datafile):\n",
-        "    raise SystemExit(\"¡Debes ejecutar la primera celda de código y descargar los archivos del conjunto de datos!\")\n",
+        "    raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
         "\n",
         "order_ids = set()\n",
-        "order_items = defaultdict(int)\n",
-        "\n",
-        "\n",
+        "order_items_count = defaultdict(int)\n",
+        "order_dates = {}\n",
+        "customer_spending = defaultdict(float)\n",
+        "monthly_sales = defaultdict(float)\n",
         "\n",
         "with open(datafile, 'r', encoding='utf-8') as fl:\n",
         "    reader = csv.reader(fl)\n",
         "    header = next(reader)\n",
         "\n",
-        "    id_order = header.index(\"OrderID\")\n",
+        "    idx_customer = header.index(\"CustomerID\")\n",
+        "    idx_order = header.index(\"OrderID\")\n",
+        "    idx_date = header.index(\"Date\")\n",
+        "    idx_price = header.index(\"Price\")\n",
         "\n",
         "    for row in reader:\n",
         "        if len(row) < 6:\n",
-        "            continue  # Saltar\n",
+        "            continue\n",
         "\n",
-        "        order_id = row[id_order]\n",
+        "        customer_id = row[idx_customer]\n",
+        "        order_id = row[idx_order]\n",
+        "        date_str = row[idx_date].strip()\n",
+        "        price_str = row[idx_price].strip()\n",
+        "\n",
+        "        try:\n",
+        "            price = float(price_str)\n",
+        "            date = datetime.strptime(date_str, '%Y-%m-%d %H:%M:%S.%f')\n",
+        "        except:\n",
+        "            continue\n",
         "\n",
         "        order_ids.add(order_id)\n",
-        "        order_items[order_id] += 1\n",
         "\n",
-        "print(\"Unique orders =\", len(order_ids))\n",
+        "        order_items_count[order_id] += 1\n",
         "\n",
-        "avg_items =  sum(order_items.values())/ len(order_items)\n",
-        "print(\"Average items per order =\", round(avg_items, 2))\n",
+        "        order_dates[order_id] = date\n",
         "\n",
-        "max_items = max(order_items.values())\n",
-        "print(\"Max items in one order =\", max_items)\n",
+        "        if date.year == 2021:\n",
+        "            customer_spending[customer_id] += price\n",
         "\n",
-        "print(\"All done!\")\n"
+        "        year_month = date.strftime('%Y-%m')\n",
+        "        monthly_sales[year_month] += price\n",
+        "\n",
+        "print(\" Unique orders =\", len(order_ids))\n",
+        "\n",
+        "avg_items = sum(order_items_count.values()) / len(order_items_count)\n",
+        "print(\" Average items per order =\", round(avg_items, 2))\n",
+        "\n",
+        "max_items = max(order_items_count.values())\n",
+        "print(\" Max items in one order =\", max_items)\n",
+        "\n",
+        "october_orders = sum(1 for d in order_dates.values() if d.year == 2021 and d.month == 10)\n",
+        "print(\" Orders in October 2021 =\", october_orders)\n",
+        "\n",
+        "top_customer = max(customer_spending.items(), key=lambda x: x[1])\n",
+        "print(\" Top customer in 2021 =\", top_customer[0], \"spent\", round(top_customer[1], 2))\n",
+        "\n",
+        "best_month = max(monthly_sales.items(), key=lambda x: x[1])\n",
+        "print(\" Best month for sales =\", best_month[0], \"with sales of\", round(best_month[1], 2))\n"
       ]
     },
     {
